# komsomolsk-on-amur-comment-analysis

./: KomsomolskOnAmurCommentAnalysis.html  KomsomolskOnAmurCommentAnalysis.ipynb  README.md  likes_cleanup.py  pyproject.toml  submissions.json
datasets/: CleanSubmissionsWithForms.json  submissionsWithForms.csv  submissionsWithForms.json  submissionsWithFormsCleanLikes.json
